# isa-ml-prerequisites

./: README.md  lifecycle.sh  on-start.sh  pyproject.toml
