[tool.poetry]
name = "isa-ml"
version = "0.1.0"
description = ""
authors = ["Raphaël Côté <raphael.cote@ellipse-synergie.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bugsnag = "^4.2.0"
fire = "^0.4.0"
pymongo = "^4.1.1"
python-dotenv = "^0.20.0"
pandas = "^1.4.2"
boto3 = "^1.22.12"
pyarrow = "^8.0.0"
lightgbm = "^3.3.2"
shap = "^0.40.0"
scikit-learn = "1.0.2"
matplotlib = "^3.5.2"
dnspython = "^2.2.1"
flake8-nb = "^0.4.0"
black = "^22.3.0"
pre-commit = "^2.19.0"
# Obligatory since not putting it gives us a TLS error
certifi = "^2022.6.15"

[tool.poetry.dev-dependencies]
nbmake = "^1.3.0"
pytest = "^7.1.2"
coverage = "^6.3.2"
jupyter = "^1.0.0"
facets-overview = "^1.0.0"
pandas-profiling = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
